# hexproperty

./: .dccache  .deepsource.toml  .eslintrc.json  .gitignore  ARCHITECTURE.md  Dockerfile  FRONTEND_ARCHITECTURE.md  HexProperty Development Best Practices Manifesto.md  HexProperty Tech Stack Sizing - 24-11-2024.xlsx  README.md  appmap.yml  cloudbuild.yaml  docker-compose.yml  jest.config.js  jest.config.ts  jest.setup.js  jest.setup.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  snyk-issues.json  tailwind.config.js  tailwind.config.ts  typedoc.json
src/: pyproject.toml
src/api/: documentation.py
src/application/: README.md
src/domain/: README.md
src/domain/documentation/: doc_handler.py
src/domain/models/: config_model.py  config_model.review.md  deployment_model.py  deployment_model.review.md  document_model.py  document_model.review.md
src/domain/process/: engine.ts
src/domain/repositories/: property.repository.ts
src/domain/security/: audit_log.py  container.py  middleware.py  policy.py  rate_limiter.py
src/events/: README.md
src/infrastructure/: README.md
src/interface/: README.md
src/interface/queries/: queryKeys.ts
src/mesh/: README.md
src/services/: deployment_history_service.py  git_service.py  template_service.py
src/stores/: reservationProcess.store.ts
src/support/: README.md
src/tests/: conftest.py  test_deployment_history_service.py  test_git_service.py  test_template_service.py
src/types/: index.ts
src/utils/: doc_generator.py  doc_helpers.py  template_validator.py
(+224 files in other folders)
