[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexproperty"
version = "0.1.0"
description = "HexProperty deployment management system"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "secure-multipart>=0.0.1",
    "aiohttp>=3.9.1",
    "aiohttp-security>=0.4.0",
    "loguru>=0.7.2",
    "dulwich>=0.21.7",
    "pyyaml>=6.0.1"
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
testpaths = [
    "src/tests"
]
python_files = [
    "test_*.py"
]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3