[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexproperty"
version = "0.1.0"
authors = [
  { name="HexProperty Team" },
]
description = "HexProperty core services"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --asyncio-mode=auto"
